# Computer-Network

./: .gitignore  README.md  pyproject.toml
Lab 2/basic/: UDPreceiver.c  UDPsender.c
Lab 2/extend-2/: CMakeLists.txt  TCPclient.cc  TCPserver.cc  chat.cc  chat.hpp
Lab 3/: config.py
Lab 3/basic/: config.py  device_info.py  router1.txt  router2.txt
Lab 3/extend/: configPC.ps1  config_2.py  config_4.py  device_info.py  net_config.bat  router1.txt  router2.txt  router3.txt  router4.txt  structure.drawio
Lab 4/: test.py
Lab 4/1/: acl.txt  configPC.ps1  config_acl.py  config_basic.py  router1.txt  router2.txt
Lab 4/2/: acl.txt  configPC.ps1  config_acl.py  config_basic.py  net_config.bat  router1.txt  router2.txt
Lab 4/2/http/: index.html  script.js  style.css
Lab 4/2/http/games/Pixel Aero/js/: background.js  config.js  enemy.js  game.js  main.js
Lab 4/2/http/games/tic-tac-toe/: index.html  style.css  tic-tac-toe.js
Lab 5/1/: config.py  configPC.ps1  switch1.txt  switch2.txt
Lab 5/2/: config.py  configPC.ps1  net_config.bat  router.txt  客厅交换机.txt  弱电箱交换机.txt  边界路由器.txt
Lab 6/1/: config.ipynb  router1.txt  router2.txt
Lab 6/2/: config.ipynb  router1.txt  router2.txt  router3.txt  router4.txt
Lab 7/1/: config.ipynb  switch1_basic.txt
huawei/: __init__.py  device.py  device_info.py
